<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:orientation="horizontal"
    android:id="@+id/row"
    android:baselineAligned="false">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:contentDescription="@string/main_photo_desc"
            android:src="@drawable/h1" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/heart_checkbox"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"/>

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
           android:progressTint="@color/colorPrimaryDarkOrange"/>
    </FrameLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="67dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/place_example"
            app:layout_constraintBottom_toTopOf="@+id/resort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:text="@string/resort_example"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/destination"
            app:layout_constraintTop_toBottomOf="@+id/destination" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="14dp"
            android:text="@string/ex_date"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/more"
            app:layout_constraintStart_toStartOf="@+id/resort"
            app:layout_constraintTop_toBottomOf="@+id/resort" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="13dp"
            android:text="@string/price_example"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDarkOrange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/resort"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/currenct_example"
            android:textColor="@color/colorPrimaryDarkOrange"
            app:layout_constraintBottom_toBottomOf="@+id/price"
            app:layout_constraintStart_toEndOf="@+id/price"
            app:layout_constraintTop_toTopOf="@+id/price" />

        <Button
            android:id="@+id/more"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/loupe"
            android:drawablePadding="2dip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>